--- a/standard-integration/public/index.html
+++ b/standard-integration/public/index.html
@@ -67,31 +67,37 @@
       //     },
       //   })
       //   .render("#paypal-button-container");
-
-      const SERVER_URL = 'http://localhost:3333/api';
+          
+      const SERVER_URL = 'http://localhost:4006';
+      
+      function uuidv4() {
+        return ([1e7]+-1e3+-4e3+-8e3+-1e11).replace(/[018]/g, c =>
+          (c ^ crypto.getRandomValues(new Uint8Array(1))[0] & 15 >> c / 4).toString(16)
+        );
+      }
 
       paypal.Buttons({
         createOrder: function (data, actions) {
           // This function is called when the user clicks the PayPal button
           const amount = 10.0; // Replace with the desired amount
-          return fetch(`${SERVER_URL}/paypal/create-order`, {
+          return fetch(`${SERVER_URL}/payment/create-order`, {
             method: 'POST',
             headers: {
               'Content-Type': 'application/json'
             },
-            body: JSON.stringify({amount})
+            body: JSON.stringify({grossAmount: amount})
           })
           .then((response) => response.json())
-          .then((order) => order.id);
+          .then((order) => order.paypalOrderId);
         },
         onApprove: function (data, actions) {
           // This function is called when the user approves the payment
-          return fetch(`${SERVER_URL}/paypal/capture-order`, {
+          return fetch(`${SERVER_URL}/payment/capture-order`, {
             method: 'POST',
             headers: {
               'Content-Type': 'application/json'
             },
-            body: JSON.stringify({ orderId: data.orderID })
+            body: JSON.stringify({ paypalOrderId: data.orderID })
           })
           .then(function(response) {
             alert('Payment completed successfully');
